<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context=".deteksi.DetectionResultActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@color/light_green_50"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hasil Deteksi"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/iv_detect"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:background="@drawable/detect"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"/>
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/bg_rounded_rect"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_result_image"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_picture" />

            <TextView
                android:id="@+id/tv_cafe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama Penyakit"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/dark_yellow"
                android:textSize="16sp"
                android:gravity="start|end"/>

            <TextView
                android:id="@+id/tv_result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_title_detect"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_title_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentage_accurate"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/dark_yellow"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_result_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_percentage"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_title_treatment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/treatment"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/dark_yellow"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_result_treatment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2sp"
                android:text="@string/result_treatment"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>