<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/deskripsi_fragment"
    android:background="@android:color/white"
    tools:context=".edukasi.DetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/iv_cafe_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            tools:src="@tools:sample/avatars"
            android:scaleType="fitXY" />
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/bg_rounded_rect"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_cafe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_cafe"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="start|end"/>

            <TextView
                android:id="@+id/tv_cafe_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_hours"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:gravity="start|end"/>

            <TextView
                android:id="@+id/tv_alamat_lengkap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:justificationMode="inter_word"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>